# jsonbp

./: .codecov.yml  .gitignore  .readthedocs.yaml  MANIFEST.in  PyPI.sh  README.md  deserialize.py  jsonbp.py  package.sh  pyproject.toml  run_tests.py  test.py
.github/workflows/: testing.yml
docs/: Schema.md  error.md  primitive.md  schema.md
docs/source/: api.rst  arrays.md  conf.py  errors.md  index.rst  primitive.md  schema.md
jbp/: array.py  blueprint.py  declaration.py  error.py  field.py  types.py  violation.py
jbp/localization/: messages.en_US.ini
jsonbp/: __init__.py  array.py  blueprint.py  declaration.py  error.py  errorType.py  error_type.py  exception.py  field.py  fieldKind.py  field_type.py  limits.py  loader.py  number.py  numbers.py  parser.py  types.py  unquoted.py
jsonbp/jbp/: array.py  blueprint.py  declaration.py  violation.py
jsonbp/localization/: en_US.ini  messages.en_US.ini  messages.pt_BR.ini  pt_BR.ini
jsonbp/types/: __init__.py  bool.py  date.py  decimal.py  float.py  instant.py  integer.py  limits.py  string.py
package/: LICENSE.txt  MANIFEST.in  README.rst  setup.py
samples/: sample.jbp  sample.js
samples/sample1/: blueprint.jbp
samples/sample10/: blueprint.jbp  json.js
samples/sample2/: blueprint.jbp  tests.txt
tests/: login.jbp  messages.missing.ini  requirements.txt  run_tests.sh  test_caching.py  test_choose_root.py  test_deserialization.py  test_error_fallbacks.py  test_loading.py  test_parsing.py  test_serialization.py
tests/00_integer/: blueprint.jbp
tests/01_boolean_strict/: blueprint.jbp
tests/02_boolean_coerced/: trials.txt
tests/03_float/: trials.txt
tests/05_string/: trials.txt
tests/07_fixed_limited/: trials.txt
tests/08_fixed_localized/: blueprint.jbp
tests/09_datetime/: blueprint.jbp  trials.txt
tests/10_datetime_custom/: blueprint.jbp  trials.txt
tests/11_enum/: trials.txt
tests/12_node/: blueprint.jbp  trials.txt
tests/14_array_node/: blueprint.jbp
tests/15_type/: blueprint.jbp
tests/16_node_extension/: blueprint.jbp  trials.txt
tests/18_root_enum_list/: trials.txt
tests/19_root_adhoc/: blueprint.jbp
tests/20_include/: math.jbp  physical.jbp
tests/21_include_nested/: blueprint.jbp  point.jbp
tests/boolean_coerced/: blueprint.jbp
tests/float/: blueprint.jbp  trials.txt
tests/float_limited/: blueprint.jbp  trials.txt
tests/integer/: trials.txt
tests/modules/: blueprint.jbp
vim/ftdetect/: jsonbp.vim
(+346 files in other folders)
