
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jsonbp"]

[project]
name = "jsonbp"
version = "1.2.1"
description = "Schema based JSON Parser/Serializer"
authors = [
	{ name = "Gustavo Venturini", email = "gustavo.c.venturini@gmail.com" }
]
requires-python = ">=3.11"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["JSON", "serialization", "deserialization"]
license = "BSD-3-Clause"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/vottini/jsonbp"
"Documentation" = "https://jsonbp.readthedocs.io/en/stable/"

